flex_target(LEXER lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.l.c)
bison_target(PARSER parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.y.c)
add_flex_bison_dependency(LEXER PARSER)
add_executable(main main.c ${BISON_PARSER_OUTPUTS} ${FLEX_LEXER_OUTPUTS})
target_link_libraries(main ${FLEX_LIBRARIES} ${BISON_LIBRARIES})
install(TARGETS main RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin)
add_subdirectory(ut)