macro(ADD_UT CATEGORY NAME SOURCES LIBRARIES)
  set_source_files_properties(${SOURCES} PROPERTIES GENERATED TRUE)
  set(TARGET ${CATEGORY}_${NAME})
  add_executable(${TARGET} ${CATEGORY}/${NAME}.c ${CATEGORY}.c ${SOURCES})
  if(${LIBRARIES})
    target_link_librairies(${TARGET} ${LIBRARIES})
  endif()
  string(TOUPPER ${CATEGORY} UT_DEFINE)
  string(CONCAT UT_DEFINE "UT_" ${UT_DEFINE})
  target_compile_definitions(${TARGET} PRIVATE ${UT_DEFINE})
  add_test(NAME ${TARGET} COMMAND ${TARGET})
  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${TARGET} DESTINATION ${PROJECT_BINARY_DIR}/bin/ut/${CATEGORY} RENAME ${NAME})
endmacro()

add_ut(lexer label ${FLEX_LEXER_OUTPUTS} ${FLEX_LIBRARIES})